--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,6 +4,8 @@ common-css:
 common-googlefonts:
 - Patrick Hand
 - Nerko One
+- Oxygen
+- Cabin
 ---
 <!doctype html>
 <html lang="{{ site.lang | default: " en-US" }}">
