--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,9 +4,10 @@ layout: base
 
 <h2>{{ page.title }}</h2>
 {% if page.subtitle %}
-<h4>{{ page.subtitle }}</h4>
+<strong>{{ page.subtitle }}</strong>
 {% endif %}
 
+<p>&nbsp;</p>
 <div class="container">
     {{ content }}
 </div>
