--- a/assets/css/kautkur.css
+++ b/assets/css/kautkur.css
@@ -1,9 +1,14 @@
 body {
-    font-family: "Patrick Hand";
+    font-family: "Oxygen";
     font-size: 14pt;
 }
 
 h1,h2,h3,h4,h5,h6 {
-    font-family: "Nerko One";
+    font-family: "Cabin";
     font-size: 150%;
+    padding: 0 0 0 0;
+}
+
+h4 {
+    font-family: "Nerko One";
 }
